<resources>
    <string name="app_name">My Application</string>
    <string name="income">収入</string>
    <string name="spending">支出</string>
    <string name="wallet">財布</string>
    <string name="account">口座</string>
    <string name="credit">クレカ</string>
    <string name="decision">決定</string>

    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>

    <string name="decimal_point">.</string>
    <string name="delete">DEL</string>

    <string name="money">0</string>
    <string name="en">円</string>

</resources>
